fix to align inner div in cluster markers
while retaining extra wrapping div which makes putting
render code in core.cljs easier

--- a/app/styles/app-modules/pages.less
+++ b/app/styles/app-modules/pages.less
@@ -929,6 +929,9 @@ h1.logo {
   border-radius: 20px;
 
   div {
+    display: inline-block;
+    vertical-align: middle;
+
     width: 30px;
     height: 30px;
     margin-left: 5px;
